# Summer_practice_studying_assistant

./: .dockerignore  .env.example  .gitignore  docker-compose.yml
backend/: .env.example  __init__.py  pyproject.toml  requirements.txt
backend/app/: config.py  database.py  dependencies.py  main.py  migrations.py  models.py  responses.py  schemas.py  security.py
backend/app/api/v1/: async_tasks.py  auth.py  calendar.py  courses.py  dashboard.py  documents.py  learning.py  mcp.py  plans.py  practice.py  rag.py  recommendations.py  router.py  statistics.py
backend/app/cache/: __init__.py  progress.py
backend/app/planning/: __init__.py  ai_planner.py  engine.py
backend/app/providers/: __init__.py  llm.py
backend/app/recommendation/: __init__.py  engine.py
backend/app/services/: __init__.py  ai_mastery.py  ai_recommend.py  async_tasks.py  confirmation.py  documents.py  mastery.py  practice_gen.py  rag.py  reports.py  statistics.py  timezones.py
backend/app/tasks/: celery_app.py  jobs.py
docker/: backend.Dockerfile  frontend.Dockerfile  nginx.conf
docs/: 01-overview-and-architecture.md  02-intelligence-design.md  03-mcp-and-infrastructure.md  04-database-and-pgvector.md  05-api-and-frontend.md  06-delivery-plan.md  07-docker-setup.md  PROJECT_PROGRESS_PRESENTATION_SCRIPT.md  PROJECT_STATUS.md  README.md  VISIBLE_FUNCTION_ACCEPTANCE.md
mcp-server/: README.md  pyproject.toml
mcp-server/src/smart_learning_mcp/: __init__.py  client.py  confirmation.py  server.py
mcp-server/tests/: test_backend_client.py  test_calendar_tools.py  test_live_calendar_tools.py
(+88 files in other folders)
