[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "studypilot-backend"
version = "0.1.0"
description = "MCP + strict-material RAG study assistant backend"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115,<1.0",
  "uvicorn[standard]>=0.30,<1.0",
  "sqlalchemy>=2.0,<3.0",
  "pydantic>=2.8,<3.0",
  "pydantic-settings>=2.4,<3.0",
  "email-validator>=2.2,<3.0",
  "PyJWT>=2.9,<3.0",
  "python-multipart>=0.0.9,<1.0",
  "pypdf>=5.0,<7.0",
  "alembic>=1.13,<2.0",
  "psycopg[binary]>=3.2,<4.0",
  "pgvector>=0.3,<1.0",
]

[project.optional-dependencies]
dev = ["httpx>=0.27,<1.0", "pytest>=8.3,<10.0"]

[tool.setuptools.packages.find]
where = [".."]
include = ["backend*"]

[tool.pytest.ini_options]
testpaths = ["../tests/backend"]
addopts = "-q"
