[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "smart-learning-mcp-server"
version = "0.1.0"
description = "MCP tools for the Smart Learning Assistant"
requires-python = ">=3.11"
dependencies = [
  "mcp>=1.9,<2",
  "httpx>=0.27,<1",
  "pydantic>=2.7,<3",
]

[project.scripts]
smart-learning-mcp = "smart_learning_mcp.server:main"

[project.optional-dependencies]
test = ["pytest>=8,<9"]

[tool.setuptools.packages.find]
where = ["src"]

